finalizing restructuring and rewrote ReadME

--- a/Documentation/P53_DMS_Documentation.ipynb
+++ b/Documentation/P53_DMS_Documentation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# P53 - DMS Analyse\n",
+    "# P53 - DMS Analysis\n",
     "#### by Frido Petersen, Dario Prifti, Maximilian Fidlin and Enno Schäfer\n",
     "*With special thanks to our Co-Worker, inspiration and beloved friend: Chat-GPT*"
    ]
