--- a/Documentation/P53 - DMS Documentation.ipynb
+++ b/Documentation/P53 - DMS Documentation.ipynb
@@ -76,9 +76,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 37,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-14T11:53:32.912021400Z",
+     "start_time": "2023-07-14T11:53:32.654887600Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "             GNE       GNN       GWN        KH\nAS_old                                        \nA       0.297155 -0.341339 -0.132955  0.099555\nC      -0.051440 -0.545096 -0.543561 -0.145375\nD       0.294087 -0.293424 -0.160131  0.170728\nE       0.304599 -0.295454 -0.177860  0.100811\nF       0.053043 -0.445465 -0.215654 -0.250488\nG       0.260013 -0.327492 -0.204543 -0.070218\nH       0.224304 -0.311369 -0.315392 -0.063656\nI      -0.067487 -0.558694 -0.405441 -0.146787\nK       0.353891 -0.226912 -0.066513  0.089816\nL       0.208043 -0.357187 -0.167821  0.039052\nM       0.197418 -0.334375 -0.263420  0.130724\nN       0.274435 -0.356652 -0.243670  0.153519\nP       0.295862 -0.330032 -0.174216  0.163799\nQ       0.365760 -0.274762 -0.130904  0.360414\nR       0.166862 -0.374469 -0.253766 -0.117733\nS       0.307954 -0.282235 -0.175382  0.164273\nT       0.247172 -0.362978 -0.212313  0.231769\nV       0.047415 -0.492980 -0.425382 -0.103461\nW       0.125329 -0.453758 -0.189563  0.399937\nY      -0.058534 -0.572673 -0.491159 -0.358660",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>GNE</th>\n      <th>GNN</th>\n      <th>GWN</th>\n      <th>KH</th>\n    </tr>\n    <tr>\n      <th>AS_old</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>A</th>\n      <td>0.297155</td>\n      <td>-0.341339</td>\n      <td>-0.132955</td>\n      <td>0.099555</td>\n    </tr>\n    <tr>\n      <th>C</th>\n      <td>-0.051440</td>\n      <td>-0.545096</td>\n      <td>-0.543561</td>\n      <td>-0.145375</td>\n    </tr>\n    <tr>\n      <th>D</th>\n      <td>0.294087</td>\n      <td>-0.293424</td>\n      <td>-0.160131</td>\n      <td>0.170728</td>\n    </tr>\n    <tr>\n      <th>E</th>\n      <td>0.304599</td>\n      <td>-0.295454</td>\n      <td>-0.177860</td>\n      <td>0.100811</td>\n    </tr>\n    <tr>\n      <th>F</th>\n      <td>0.053043</td>\n      <td>-0.445465</td>\n      <td>-0.215654</td>\n      <td>-0.250488</td>\n    </tr>\n    <tr>\n      <th>G</th>\n      <td>0.260013</td>\n      <td>-0.327492</td>\n      <td>-0.204543</td>\n      <td>-0.070218</td>\n    </tr>\n    <tr>\n      <th>H</th>\n      <td>0.224304</td>\n      <td>-0.311369</td>\n      <td>-0.315392</td>\n      <td>-0.063656</td>\n    </tr>\n    <tr>\n      <th>I</th>\n      <td>-0.067487</td>\n      <td>-0.558694</td>\n      <td>-0.405441</td>\n      <td>-0.146787</td>\n    </tr>\n    <tr>\n      <th>K</th>\n      <td>0.353891</td>\n      <td>-0.226912</td>\n      <td>-0.066513</td>\n      <td>0.089816</td>\n    </tr>\n    <tr>\n      <th>L</th>\n      <td>0.208043</td>\n      <td>-0.357187</td>\n      <td>-0.167821</td>\n      <td>0.039052</td>\n    </tr>\n    <tr>\n      <th>M</th>\n      <td>0.197418</td>\n      <td>-0.334375</td>\n      <td>-0.263420</td>\n      <td>0.130724</td>\n    </tr>\n    <tr>\n      <th>N</th>\n      <td>0.274435</td>\n      <td>-0.356652</td>\n      <td>-0.243670</td>\n      <td>0.153519</td>\n    </tr>\n    <tr>\n      <th>P</th>\n      <td>0.295862</td>\n      <td>-0.330032</td>\n      <td>-0.174216</td>\n      <td>0.163799</td>\n    </tr>\n    <tr>\n      <th>Q</th>\n      <td>0.365760</td>\n      <td>-0.274762</td>\n      <td>-0.130904</td>\n      <td>0.360414</td>\n    </tr>\n    <tr>\n      <th>R</th>\n      <td>0.166862</td>\n      <td>-0.374469</td>\n      <td>-0.253766</td>\n      <td>-0.117733</td>\n    </tr>\n    <tr>\n      <th>S</th>\n      <td>0.307954</td>\n      <td>-0.282235</td>\n      <td>-0.175382</td>\n      <td>0.164273</td>\n    </tr>\n    <tr>\n      <th>T</th>\n      <td>0.247172</td>\n      <td>-0.362978</td>\n      <td>-0.212313</td>\n      <td>0.231769</td>\n    </tr>\n    <tr>\n      <th>V</th>\n      <td>0.047415</td>\n      <td>-0.492980</td>\n      <td>-0.425382</td>\n      <td>-0.103461</td>\n    </tr>\n    <tr>\n      <th>W</th>\n      <td>0.125329</td>\n      <td>-0.453758</td>\n      <td>-0.189563</td>\n      <td>0.399937</td>\n    </tr>\n    <tr>\n      <th>Y</th>\n      <td>-0.058534</td>\n      <td>-0.572673</td>\n      <td>-0.491159</td>\n      <td>-0.358660</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# The aminoacids in the original sequence that, when replaced, caused the most negative DMS scores throughout the whole Protein.\n",
     "fun.calculate_average_dms_score_old(('GNE', doc.gia_null_eto_norm_amp), ('GNN', doc.gia_null_nut_norm_amp), ('GWN', doc.gia_wt_nut_norm_amp), ('KH', doc.kot_hum_norm_amp))"
@@ -86,12 +101,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-14T11:54:15.459056Z",
+     "start_time": "2023-07-14T11:54:15.111804300Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lrrrr}\n",
+      "\\toprule\n",
+      " & GNE & GNN & GWN & KH \\\\\n",
+      "AS_new &  &  &  &  \\\\\n",
+      "\\midrule\n",
+      "A & 0.230294 & -0.366054 & -0.215091 & 0.263278 \\\\\n",
+      "C & 0.306080 & -0.298968 & -0.162306 & 0.001974 \\\\\n",
+      "D & 0.177935 & -0.380285 & -0.229204 & -0.050507 \\\\\n",
+      "E & 0.189927 & -0.351673 & -0.234932 & -0.168010 \\\\\n",
+      "F & 0.265481 & -0.330305 & -0.208782 & -0.066033 \\\\\n",
+      "G & 0.188055 & -0.378543 & -0.229989 & -0.028291 \\\\\n",
+      "H & 0.237960 & -0.358202 & -0.210794 & 0.053206 \\\\\n",
+      "I & 0.284615 & -0.312255 & -0.214637 & 0.094158 \\\\\n",
+      "K & 0.212806 & -0.339281 & -0.220014 & 0.043194 \\\\\n",
+      "L & 0.238353 & -0.358262 & -0.226845 & 0.102409 \\\\\n",
+      "M & 0.299051 & -0.286251 & -0.177107 & 0.132921 \\\\\n",
+      "N & 0.251537 & -0.331806 & -0.213871 & -0.058348 \\\\\n",
+      "P & 0.096191 & -0.449589 & -0.275914 & -0.143151 \\\\\n",
+      "Q & 0.233595 & -0.355782 & -0.207876 & 0.092539 \\\\\n",
+      "R & 0.190213 & -0.393423 & -0.239513 & -0.022793 \\\\\n",
+      "S & 0.224142 & -0.375933 & -0.218467 & 0.076901 \\\\\n",
+      "T & 0.239220 & -0.353747 & -0.213083 & 0.128089 \\\\\n",
+      "V & 0.284880 & -0.325358 & -0.199549 & 0.106847 \\\\\n",
+      "W & 0.210919 & -0.344523 & -0.225647 & -0.335867 \\\\\n",
+      "Y & 0.265938 & -0.311888 & -0.219662 & -0.015396 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#the amino acids that, when mutated to, resulted in the most significant decreases in the DMS score, indicating a substantial impact on protein function.\n",
-    "fun.calculate_average_dms_score_new(('GNE', doc.gia_null_eto_norm_amp), ('GNN', doc.gia_null_nut_norm_amp), ('GWN', doc.gia_wt_nut_norm_amp), ('KH', doc.kot_hum_norm_amp))"
+    "print(fun.calculate_average_dms_score_new(('GNE', doc.gia_null_eto_norm_amp), ('GNN', doc.gia_null_nut_norm_amp), ('GWN', doc.gia_wt_nut_norm_amp), ('KH', doc.kot_hum_norm_amp)).sort_values(by='GNE').to_latex())"
    ]
   },
   {
@@ -212,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "# calculate distance matrices as well as mean substitution matrices\n",
@@ -225,7 +280,11 @@
     "mean_subs_mut_p53 = dc.rmv_na(de.mean_substitutions(norm_frame).T)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-14T11:40:12.531618100Z",
+     "start_time": "2023-07-14T11:40:11.889830200Z"
+    }
    }
   },
   {
