--- a/domain_comparison/exploratory_domc/all_dms.ipynb
+++ b/domain_comparison/exploratory_domc/all_dms.ipynb
@@ -6,13 +6,12 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:14.628757Z",
-     "end_time": "2023-07-07T19:38:14.779383Z"
+     "start_time": "2023-07-16T11:31:51.339087Z",
+     "end_time": "2023-07-16T11:31:51.520485Z"
     }
    },
    "outputs": [],
    "source": [
-    "#I will write a function, that takes in an aminoacid sequence and the positions where this sequence is to sliced. By this, further domain comparisons are made possible\n",
     "import pandas as pd\n",
     "import data_cleanup as dc\n",
     "import domain_comparison as doc\n",
@@ -24,21 +23,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### In this notebook we compare the DMS scores of the different domains. We performed different analyses such as plotting the distributions or taking a look at the mean substitution scores."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2023-07-07T19:38:14.779738Z",
-     "end_time": "2023-07-07T19:38:14.824283Z"
-    }
-   },
    "outputs": [],
    "source": [
     "fpath = '../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv'\n",
     "#fpath = '../DMS_data/P53_HUMAN_Giacomelli_NULL_Nutlin_2018.csv'\n",
     "#fpath = '../DMS_data/P53_HUMAN_Giacomelli_WT_Nutlin_2018.csv'\n",
-    "df = dc.norm(pd.read_csv(fpath))\n"
-   ]
+    "df = dc.norm(pd.read_csv(fpath))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -360,9 +365,7 @@
     "ax.legend()\n",
     "\n",
     "\n",
-    "plt.show()\n",
-    "\n",
-    "fig.savefig('./data/all_dms.png', dpi=300)"
+    "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
@@ -441,6 +444,9 @@
     "ExecuteTime": {
      "start_time": "2023-07-07T19:38:17.118911Z",
      "end_time": "2023-07-07T19:38:17.443972Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -455,6 +461,9 @@
     "ExecuteTime": {
      "start_time": "2023-07-07T19:38:17.397814Z",
      "end_time": "2023-07-07T19:38:17.614913Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -469,6 +478,9 @@
     "ExecuteTime": {
      "start_time": "2023-07-07T19:38:17.617226Z",
      "end_time": "2023-07-07T19:38:17.819265Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -483,6 +495,9 @@
     "ExecuteTime": {
      "start_time": "2023-07-07T19:38:17.808228Z",
      "end_time": "2023-07-07T19:38:18.007088Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -497,6 +512,9 @@
     "ExecuteTime": {
      "start_time": "2023-07-07T19:38:18.009461Z",
      "end_time": "2023-07-07T19:38:18.186774Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -511,6 +529,9 @@
     "ExecuteTime": {
      "start_time": "2023-07-07T19:38:18.188677Z",
      "end_time": "2023-07-07T19:38:18.381570Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
