--- a/domain_comparison/exploratory_domc/all_dms_to_smu.ipynb
+++ b/domain_comparison/exploratory_domc/all_dms_to_smu.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:46:16.983074Z",
-     "end_time": "2023-07-07T19:46:17.049335Z"
+     "start_time": "2023-07-16T11:42:16.476343Z",
+     "end_time": "2023-07-16T11:42:16.480041Z"
     }
    },
    "outputs": [],
@@ -43,8 +43,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "t1_mean_smu = pd.read_csv('./data/t1_mean_smu.csv')\n",
-    "t1_mean = pd.read_csv('./data/t1_mean.csv')\n",
+    "t1_mean_smu = pd.read_csv('../data/t1_mean_smu.csv')\n",
+    "t1_mean = pd.read_csv('../data/t1_mean.csv')\n",
     "\n",
     "U_statistic, p_value = stats.mannwhitneyu(t1_mean_smu['mean'], t1_mean['mean'])\n",
     "\n",
@@ -59,8 +59,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-07T19:46:16.988126Z",
-     "end_time": "2023-07-07T19:46:17.052045Z"
+     "start_time": "2023-07-16T11:42:28.007250Z",
+     "end_time": "2023-07-16T11:42:28.036693Z"
     }
    }
   },
