--- a/domain_comparison/exploratory_domc/smu_to_rdm.ipynb
+++ b/domain_comparison/exploratory_domc/smu_to_rdm.ipynb
@@ -17,14 +17,13 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import gaussian_kde\n",
     "import scipy.stats as stats\n",
-    "alpha = 0.05\n",
-    "import pandas as pd"
+    "alpha = 0.05"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# Comparing the effects of taking out random mutations or just single mutations"
+    "### Comparing the effects of taking out random mutations or just single mutations based on the means for each position."
    ],
    "metadata": {
     "collapsed": false
