--- a/domain_comparison/exploratory_domc/rdm_dms.ipynb
+++ b/domain_comparison/exploratory_domc/rdm_dms.ipynb
@@ -26,7 +26,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### In this document the same operations as in Domain_slicing are done. In this case amino acids based on random codon generation are removed before."
+    "### In this document the same operations as in all_dms are done. In this case amino acids based on random codon generation are removed before."
    ],
    "metadata": {
     "collapsed": false
