--- a/domain_comparison/exploratory_domc/smu_dms.ipynb
+++ b/domain_comparison/exploratory_domc/smu_dms.ipynb
@@ -22,7 +22,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### In this document the same operations as in Domain_slicing are done. In this case the Amino acids, that cannot be reached with single mutations of the DNA are removed before."
+    "### In this document the same operations as in all_dms are done. In this case the Amino acids, that cannot be reached with single mutations of the DNA are removed before."
    ],
    "metadata": {
     "collapsed": false
