--- a/Documentation/P53_DMS_Documentation.ipynb
+++ b/Documentation/P53_DMS_Documentation.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# P53 - DMS Analysis\n",
-    "#### by Frido Petersen, Dario Prifti, Maximilian Fidlin and Enno Schäfer"
+    "#### by Frido Petersen, Dario Prifti, Maximilian Fidlin and Enno Schäfer\n",
+    "*With special thanks to our Co-Worker, inspiration and beloved friend: Chat-GPT*"
    ]
   },
   {
