updated .read_csv to match folder structure

--- a/data_exploration/exploratory_de/Hierarchical_clustering.ipynb
+++ b/data_exploration/exploratory_de/Hierarchical_clustering.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-07-06T14:58:59.541361900Z",
-     "start_time": "2023-07-06T14:58:58.253499400Z"
+     "end_time": "2023-07-17T06:10:27.489890800Z",
+     "start_time": "2023-07-17T06:10:27.400156Z"
     }
    },
    "outputs": [],
@@ -31,10 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "outputs": [],
    "source": [
-    "fpath = '../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv'\n",
+    "fpath = '../../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv'\n",
     "df = pd.read_csv(fpath)\n",
     "\n",
     "# create distance matrix\n",
@@ -43,14 +43,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-06T14:58:59.672657800Z",
-     "start_time": "2023-07-06T14:58:59.541361900Z"
+     "end_time": "2023-07-17T06:10:27.546782900Z",
+     "start_time": "2023-07-17T06:10:27.439096Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stderr",
@@ -62,9 +62,9 @@
     },
     {
      "data": {
-      "text/plain": "<seaborn.matrix.ClusterGrid at 0x17b1b5d8b20>"
+      "text/plain": "<seaborn.matrix.ClusterGrid at 0x19db2c32760>"
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -90,14 +90,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-06T14:59:00.700322300Z",
-     "start_time": "2023-07-06T14:58:59.672657800Z"
+     "end_time": "2023-07-17T06:10:29.004987900Z",
+     "start_time": "2023-07-17T06:10:27.546782900Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stderr",
@@ -119,8 +119,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-06T14:59:00.963926100Z",
-     "start_time": "2023-07-06T14:59:00.706668200Z"
+     "end_time": "2023-07-17T06:10:29.383970200Z",
+     "start_time": "2023-07-17T06:10:29.015940400Z"
     }
    }
   }
