--- a/visualization/exploratory_vis/VisualizationTesting.ipynb
+++ b/visualization/exploratory_vis/VisualizationTesting.ipynb
@@ -18,7 +18,6 @@
     "import pandas as pd\n",
     "import data_cleanup as dc\n",
     "import data_exploration as de\n",
-    "import Documentation as doc\n",
     "import visualization as vis\n",
     "\n",
     "import severity_score as ss"
@@ -66,10 +65,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "gia_null_eto: pd.DataFrame = pd.read_csv('../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv')\n",
-    "gia_null_nut: pd.DataFrame = pd.read_csv('../DMS_data/P53_HUMAN_Giacomelli_NULL_Nutlin_2018.csv')\n",
-    "gia_wt_nut: pd.DataFrame = pd.read_csv('../DMS_data/P53_HUMAN_Giacomelli_WT_Nutlin_2018.csv')\n",
-    "kot_hum: pd.DataFrame = pd.read_csv('../DMS_data/P53_HUMAN_Kotler_2018.csv')"
+    "gia_null_eto: pd.DataFrame = pd.read_csv('../../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv')\n",
+    "gia_null_nut: pd.DataFrame = pd.read_csv('../../DMS_data/P53_HUMAN_Giacomelli_NULL_Nutlin_2018.csv')\n",
+    "gia_wt_nut: pd.DataFrame = pd.read_csv('../../DMS_data/P53_HUMAN_Giacomelli_WT_Nutlin_2018.csv')\n",
+    "kot_hum: pd.DataFrame = pd.read_csv('../../DMS_data/P53_HUMAN_Kotler_2018.csv')"
    ],
    "metadata": {
     "collapsed": false
@@ -465,7 +464,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "ADRB2_hum: pd.DataFrame = pd.read_csv('../DMS_data/ADRB2_HUMAN_Jones_2020.csv')\n",
+    "ADRB2_hum: pd.DataFrame = pd.read_csv('../../DMS_data/ADRB2_HUMAN_Jones_2020.csv')\n",
     "ADRB2_hum_amp: pd.DataFrame = dc.aufteilung_mut_pos(ADRB2_hum)\n",
     "ADRB2_hum_norm: pd.DataFrame = dc.norm(ADRB2_hum)\n",
     "ADRB2_hum_norm_df: pd.DataFrame = dc.df_transform(ADRB2_hum_norm)\n",
@@ -504,7 +503,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "BLAT: pd.DataFrame = pd.read_csv('../DMS_data/BLAT_ECOLX_Stiffler_2015.csv')\n",
+    "BLAT: pd.DataFrame = pd.read_csv('../../DMS_data/BLAT_ECOLX_Stiffler_2015.csv')\n",
     "BLAT_amp: pd.DataFrame = dc.aufteilung_mut_pos(BLAT)\n",
     "BLAT_norm: pd.DataFrame = dc.norm(BLAT)\n",
     "BLAT_norm_df: pd.DataFrame = dc.df_transform(BLAT_norm)\n",
@@ -543,24 +542,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "BRCA: pd.DataFrame = pd.read_csv('../DMS_data/BRCA1_HUMAN_Findlay_2018.csv')\n",
+    "BRCA: pd.DataFrame = pd.read_csv('../../DMS_data/BRCA1_HUMAN_Findlay_2018.csv')\n",
     "BRCA_amp: pd.DataFrame = dc.aufteilung_mut_pos(BRCA)\n",
     "BRCA_norm: pd.DataFrame = dc.norm(BRCA)\n",
     "BRCA_norm_df: pd.DataFrame = dc.df_transform(BRCA_norm)\n",
     "BRCA_norm_df_mean: pd.DataFrame = de.df_mean(BRCA_norm_df)\n",
     "dataframe_BRCA = [BRCA_norm_df_mean]\n",
     "BRCA_norm_df_mean.name = 'BRCA1_HUMAN_Findlay_2018.csv'"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "vis.hmap(doc.kot_hum)"
    ],
    "metadata": {
     "collapsed": false
