--- a/visualization/exploratory_vis/LinegraphTesting.ipynb
+++ b/visualization/exploratory_vis/LinegraphTesting.ipynb
@@ -23,7 +23,6 @@
     "import data_cleanup as dc\n",
     "import data_exploration as de\n",
     "import matplotlib.pyplot as plt\n",
-    "import Documentation as doc\n",
     "import numpy as np"
    ]
   },
@@ -32,7 +31,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "gia_null_eto: pd.DataFrame = pd.read_csv('../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv')"
+    "gia_null_eto: pd.DataFrame = pd.read_csv('../../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv')"
    ],
    "metadata": {
     "collapsed": false
@@ -54,7 +53,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "kot_hum: pd.DataFrame = pd.read_csv('../DMS_data/P53_HUMAN_Kotler_2018.csv')"
+    "kot_hum: pd.DataFrame = pd.read_csv('../../DMS_data/P53_HUMAN_Kotler_2018.csv')"
    ],
    "metadata": {
     "collapsed": false
@@ -162,7 +161,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "gia_null_nut_df: pd.DataFrame = doc.gia_null_nut_df"
+    "gia_null_nut_df: pd.DataFrame = pd.read_csv('../../DMS_data/P53_HUMAN_Giacomelli_NULL_Nutlin_2018.csv')"
    ],
    "metadata": {
     "collapsed": false
@@ -173,7 +172,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "gia_wt_nut_df: pd.DataFrame = doc.gia_wt_nut_df"
+    "gia_wt_nut_df: pd.DataFrame = pd.read_csv('../../DMS_data/P53_HUMAN_Giacomelli_WT_Nutlin_2018.csv')"
    ],
    "metadata": {
     "collapsed": false
@@ -184,7 +183,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "gia_null_nut_df_mean: pd.DataFrame = de.df_mean(gia_null_nut_df)"
+    "gia_null_nut_df_mean: pd.DataFrame = de.df_mean(dc.df_transform(gia_null_nut_df))"
    ],
    "metadata": {
     "collapsed": false
@@ -195,7 +194,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "gia_wt_nut_df_mean: pd.DataFrame = de.df_mean(gia_wt_nut_df)"
+    "gia_wt_nut_df_mean: pd.DataFrame = de.df_mean(dc.df_transform(gia_wt_nut_df))"
    ],
    "metadata": {
     "collapsed": false
@@ -255,8 +254,8 @@
    "source": [
     "kot_hum_df_mmn_mean: pd.DataFrame = de.df_mean(kot_hum_df_mmn)\n",
     "gia_null_eto_df_mmn_mean: pd.DataFrame= de.df_mean(gia_null_eto_df_mmn)\n",
-    "gia_null_nut_df_mmn_mean: pd.DataFrame= de.df_mean(gia_null_nut_df_mmn)\n",
-    "gia_wt_nut_df_mmn_mean: pd.DataFrame= de.df_mean(gia_wt_nut_df_mmn)"
+    "gia_null_nut_df_mmn_mean: pd.DataFrame= de.df_mean(dc.df_transform(gia_null_nut_df_mmn))\n",
+    "gia_wt_nut_df_mmn_mean: pd.DataFrame= de.df_mean(dc.df_transform(gia_wt_nut_df_mmn))"
    ],
    "metadata": {
     "collapsed": false
@@ -329,7 +328,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "gia_null_eto: pd.DataFrame = pd.read_csv('../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv')"
+    "gia_null_eto: pd.DataFrame = pd.read_csv('../../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv')"
    ],
    "metadata": {
     "collapsed": false
