--- a/Documentation/P53_DMS_Documentation.ipynb
+++ b/Documentation/P53_DMS_Documentation.ipynb
@@ -304,7 +304,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "For the comparison of the domains we first cut our data into smaller corresponding chunks. We then applied different types of analyses on those domains, all of which can be seen in the domain_comparison folder. We then repeated those steps with only the aminoacids reachable with a single base mutation (SMU) and with amino acids belonging to random codons. We then compared the complete dataset to the SMU dataset domain-wise. Also, the random mutations where compared to the SMU."
+    "For the comparison of the domains we first cut our data into smaller corresponding chunks. We then applied different types of analyses on those domains, all of\n",
+    "which can be seen in the domain_comparison folder. Those analyses included the generation of\n",
+    "plots showing the distribution of DMS scores and taking a look at the mean substitutions. We then repeated those steps with only the amino acids reachable with a\n",
+    "single base mutation (SMU) and with amino acids belonging to random codons. We then compared the\n",
+    "complete dataset to the SMU dataset domain-wise. Also, the results of random mutations where compared to the SMU.\n",
+    "We looked for similar results for the other Giacomelli data sets."
    ],
    "metadata": {
     "collapsed": false
@@ -316,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# All DMS scores divided onto the different domains\n",
+    "print('All DMS scores plotted domain-wise')\n",
     "all_dms = plt.imread('../domain_comparison/data/all_dms.png')\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
@@ -330,9 +335,43 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#Sinlge mutations only\n",
-    "smu_dms = plt.imread('../domain_comparison/data/smu_dms.png')\n",
+    "print('Mean DMS scores Transactivation Domain 1')\n",
+    "mean_substitutions_t1 = plt.imread('../domain_comparison/data/mean_substitutions_t1.png')\n",
+    "\n",
     "fig1, ax1 = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(all_dms)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('Mean DMS scores DNA Binding Domain')\n",
+    "mean_substitutions_dna = plt.imread('../domain_comparison/data/mean_substitutions_dna.png')\n",
+    "\n",
+    "fig2, ax2 = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(all_dms)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('SMU DMS scores plotted domain-wise')\n",
+    "smu_dms = plt.imread('../domain_comparison/data/smu_dms.png')\n",
+    "fig3, ax3 = plt.subplots(figsize=(20, 20))\n",
     "plt.imshow(smu_dms)\n",
     "plt.axis('off')\n",
     "plt.show()"
@@ -346,9 +385,73 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#Comparing DNA binding domain\n",
+    "print('Comparing DNA binding domains')\n",
     "all_vs_smu = plt.imread('../domain_comparison/data/all_vs_smu.png')\n",
-    "fig2, ax2 = plt.subplots(figsize=(20, 20))\n",
+    "fig4, ax4 = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(all_vs_smu)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('All DMS scores plotted domain-wise, Giacomelli WT Nutlin')\n",
+    "all_dms_wt_nut = plt.imread('../domain_comparison/data/all_dms_wt_nut.png')\n",
+    "fig5, ax5 = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(all_vs_smu)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('All DMS scores plotted domain-wise, Giacomelli NULL Nutlin')\n",
+    "all_dms_null_nut = plt.imread('../domain_comparison/data/all_dms_null_nut.png')\n",
+    "fig6, ax6 = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(all_vs_smu)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('DMS scores DNA Binding Domain, Giacomelli NULL Nutlin')\n",
+    "histogramm_dna_null_nut = plt.imread('../domain_comparison/data/histogramm_dna_null_nut.png')\n",
+    "fig7, ax7 = plt.subplots(figsize=(20, 20))\n",
+    "plt.imshow(all_vs_smu)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('DMS scores DNA Binding Domain with all DMS scores and SMU, Nutlin datasets')\n",
+    "all_vs_smu_nut = plt.imread('../domain_comparison/data/all_vs_smu_nut.png')\n",
+    "fig8, ax8 = plt.subplots(figsize=(20, 20))\n",
     "plt.imshow(all_vs_smu)\n",
     "plt.axis('off')\n",
     "plt.show()"
